--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
     font-display: swap;
 }
 
-body{
+body {
     overflow-x: hidden;
 }
 
@@ -200,7 +200,7 @@ header::before {
     z-index: 21;
 }
 
-.explore-btn::before{
+.explore-btn::before {
     content: '';
     position: absolute;
     width: 100%;
@@ -213,25 +213,25 @@ header::before {
     transition: 0.25s linear;
 }
 
-.explore-btn:hover::before{
+.explore-btn:hover::before {
     transform: translateX(0);
 }
 
 /* Courses */
 
-.courses{
+.courses {
     padding: 50px;
     position: relative;
 }
 
-.cards{
+.cards {
     border-radius: 10px;
     width: 211px;
     height: 250px;
     transition: 0.25s ease-in-out;
 }
 
-.cards a img{
+.cards a img {
     width: 85px;
 }
 
@@ -245,44 +245,44 @@ header::before {
     flex-direction: column;
 }
 
-.cards a h3{
+.cards a h3 {
     font-size: 25px;
     line-height: 50px;
 }
 
-.courses h1{
+.courses h1 {
     text-align: center;
     text-transform: capitalize;
     margin: 20px 0 60px 0;
     font-size: 40px;
     font-weight: bold;
 }
+
 /* .paddinglr{
     padding-left: 100px;
     padding-right: 100px;
 } */
 
-.cards:hover{
+.cards:hover {
     transform: translateY(-15px);
 }
 
 /* directors-message */
 
-.directors-message{
+.directors-message {
     margin-top: 100px;
     height: 90vh;
     width: 100vw;
 }
 
-
-.director-img{
+.director-img {
     height: 90vh;
     width: 45vw;
     background-image: url(../images/photo_2020-12-03_20-51-05.jpg);
     background-size: cover;
 }
 
-.directors-message .message h1{
+.directors-message .message h1 {
     font-size: 45px;
     line-height: 55px;
     text-align: left;
@@ -292,11 +292,11 @@ header::before {
     opacity: 0.9;
 }
 
-.directors-message .message h3{
+.directors-message .message h3 {
     color: rgba(80, 77, 77, 0.8);
 }
 
-.directors-message .message p{
+.directors-message .message p {
     font-size: 17px;
     line-height: 30px;
     margin-top: 50px;
@@ -307,14 +307,14 @@ header::before {
     opacity: .8;
 }
 
-.directors-message .message{
+.directors-message .message {
     height: 90vh;
     width: 65vw;
     background-color: #f2f3f7;
     padding: 100px 200px 0 100px;
 }
 
-.explore-btn-message{
+.explore-btn-message {
     left: 0%;
     margin-top: 50px;
     transform: translateX(0);
@@ -322,11 +322,147 @@ header::before {
 
 /* Gallery section */
 
-.gallery-container h1{
+.gallery-container h1 {
     text-align: center;
     margin-top: 100px;
     margin-bottom: 50px;
     text-transform: uppercase;
     font-weight: 600;
     font-size: 50px;
+}
+
+.gallery-grid {
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    gap: 15px 41.5px;
+    grid-template-areas: ". . . . ." ". . . . .";
+}
+
+/* Slideshow container */
+
+.slideshow-container {
+    max-width: 1170px;
+    position: relative;
+    margin: auto;
+    overflow: hidden;
+}
+
+/* Hide the images by default */
+
+.mySlides {
+    display: none;
+}
+
+/* Next & previous buttons */
+
+.prev, .next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    margin-top: -22px;
+    padding: 16px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+    background-color: rgba(0, 0, 0, 0.6);
+}
+
+/* Position the "next button" to the right */
+
+.next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+
+.prev:hover, .next:hover {
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+/* Number text (1/3 etc) */
+
+.numbertext {
+    color: #f2f2f2;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
+}
+
+/* The dots/bullets/indicators */
+
+.dot {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease-in-out;
+}
+
+.active, .dot:hover {
+    background-color: #717171;
+}
+
+/* Fading animation */
+
+.fade {
+    -webkit-animation-name: slide;
+    -webkit-animation-duration: 1.5s;
+    animation-name: slide;
+    animation-duration: 1.5s;
+}
+
+/* youtube video section  */
+
+.yt-playlists h1 {
+    text-align: center;
+    margin-top: 100px;
+    margin-bottom: 50px;
+    text-transform: uppercase;
+    font-weight: 600;
+    font-size: 50px;
+}
+
+.about-us {
+    width: 100vw;
+    height: auto;
+    background-color: #f2f3f7;
+}
+
+.about-us h1 {
+    font-size: 45px;
+    line-height: 55px;
+    text-align: center;
+    font-weight: 700;
+    color: #333;
+    margin: 25px 0;
+    opacity: 1;
+}
+
+@-webkit-keyframes slide {
+    from {
+        transform: translateX(100%);
+    }
+    to {
+        transform: translateX(0);
+    }
+}
+
+@keyframes slide {
+    from {
+        transform: translateX(100%);
+    }
+    to {
+        transform: translateX(0);
+    }
 }
