--- a/css/style.css
+++ b/css/style.css
@@ -296,7 +296,7 @@ header::before {
     color: rgba(80, 77, 77, 0.8);
 }
 
-.directors-message .message p {
+.directors-message .message p, .topic-text p {
     font-size: 17px;
     line-height: 30px;
     margin-top: 50px;
@@ -325,40 +325,61 @@ header::before {
 .gallery-container h1 {
     text-align: center;
     margin-top: 100px;
-    margin-bottom: 50px;
+    margin-bottom: 35px;
     text-transform: uppercase;
     font-weight: 600;
     font-size: 50px;
 }
 
-.gallery-grid {
-    width: 100%;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    gap: 15px 41.5px;
-    grid-template-areas: ". . . . ." ". . . . .";
+/* The dots/bullets/indicators */
+
+.dot {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 15px 2px 0px 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease-in-out;
 }
 
-/* Slideshow container */
+.active, .dot:hover {
+    background-color: #717171;
+}
 
-.slideshow-container {
+.carousel-container {
+    width: 100%;
     max-width: 1170px;
-    position: relative;
     margin: auto;
     overflow: hidden;
+    position: relative;
 }
 
-/* Hide the images by default */
+.carousel-slide img {
+    width: 1170px;
+    height: 500px;
+}
 
-.mySlides {
-    display: none;
+.carousel-slide {
+    display: flex;
+}
+
+/* Number text (1/3 etc) */
+
+.numbertext {
+    color: #f2f2f2;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
 }
 
 /* Next & previous buttons */
 
 .prev, .next {
     cursor: pointer;
+    z-index: 1;
     position: absolute;
     top: 50%;
     width: auto;
@@ -386,42 +407,6 @@ header::before {
     background-color: rgba(0, 0, 0, 0.8);
 }
 
-/* Number text (1/3 etc) */
-
-.numbertext {
-    color: #f2f2f2;
-    font-size: 12px;
-    padding: 8px 12px;
-    position: absolute;
-    top: 0;
-}
-
-/* The dots/bullets/indicators */
-
-.dot {
-    cursor: pointer;
-    height: 15px;
-    width: 15px;
-    margin: 0 2px;
-    background-color: #bbb;
-    border-radius: 50%;
-    display: inline-block;
-    transition: background-color 0.6s ease-in-out;
-}
-
-.active, .dot:hover {
-    background-color: #717171;
-}
-
-/* Fading animation */
-
-.fade {
-    -webkit-animation-name: slide;
-    -webkit-animation-duration: 1.5s;
-    animation-name: slide;
-    animation-duration: 1.5s;
-}
-
 /* youtube video section  */
 
 .yt-playlists h1 {
@@ -433,10 +418,13 @@ header::before {
     font-size: 50px;
 }
 
+/* about-us  */
+
 .about-us {
     width: 100vw;
     height: auto;
     background-color: #f2f3f7;
+    margin-top: 50px;
 }
 
 .about-us h1 {
@@ -445,24 +433,52 @@ header::before {
     text-align: center;
     font-weight: 700;
     color: #333;
-    margin: 25px 0;
+    margin-bottom: 60px;
     opacity: 1;
+    padding-top: 50px;
 }
 
-@-webkit-keyframes slide {
-    from {
-        transform: translateX(100%);
-    }
-    to {
-        transform: translateX(0);
-    }
+.topics .topic i {
+    position: absolute;
+    color: white;
+    font-size: 35px;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
-@keyframes slide {
-    from {
-        transform: translateX(100%);
-    }
-    to {
-        transform: translateX(0);
-    }
+.topics .topic .circle {
+    position: relative;
+    width: 75px;
+    height: 75px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+}
+
+.topic>div {
+    margin-top: 50px;
+}
+
+.topics-grid {
+    column-count: 3;
+}
+
+.topic-text {
+    width: 71%;
+}
+
+.topic-text p {
+    margin-top: 25px;
+    font-size: 14px;
+    line-height: 22px;
+}
+
+.topic-text h3 {
+    font-weight: 700;
+    font-size: 20;
+    color: #333;
+}
+
+.about-us-container{
+    padding-bottom: 75px;
 }
