--- a/css/style.css
+++ b/css/style.css
@@ -79,6 +79,7 @@ header::before {
 .navbar {
     position: relative;
     z-index: 2;
+    /* box-shadow: 0 20px 20px rgba(0, 0, 0, 0.2), 0px 0px 50px rgba(0, 0, 0, 0.2); */
 }
 
 .navbar ul li {
@@ -164,6 +165,7 @@ header::before {
     -moz-border-radius: 100px;
     border-radius: 100px;
     color: #FFFFFF;
+    box-shadow: 0 20px 20px rgba(0, 0, 0, 0.2), 0px 0px 50px rgba(0, 0, 0, 0.2);
     font-size: 20px;
     font-weight: 100;
     padding: 20px 39px;
@@ -201,34 +203,40 @@ header::before {
 /* Courses */
 
 .courses {
-    padding: 50px;
+    /* padding: 50px; */
+    margin: 55px 0 125px 0;
     position: relative;
 }
 
 .cards {
-    border-radius: 10px;
-    width: 211px;
-    height: 250px;
+    border-radius: 20px;
+    width: 220px;
+    height: 325px;
     transition: 0.25s ease-in-out;
+    background-color: #F2F3F7;
+    box-shadow: 0 20px 20px rgba(0, 0, 0, 0.2), 0px 0px 25px rgba(0, 0, 0, 0.2);
 }
 
-.cards a img {
-    width: 85px;
+.cards img {
+    width: 90%;
+    height: 45%;
+    margin-bottom: 20px;
 }
 
-.cards a {
-    padding: 50px;
+.cards {
+    padding: 15px;
     display: flex;
     justify-content: center;
     align-items: center;
-    text-decoration: none;
-    color: white;
     flex-direction: column;
 }
 
-.cards a h3 {
+.cards h3 {
     font-size: 25px;
-    line-height: 50px;
+    color: #464747;
+    font-weight: 700;
+    opacity: 0.9;
+    margin-bottom: 10px;
 }
 
 .courses h1 {
@@ -237,6 +245,14 @@ header::before {
     margin: 20px 0 60px 0;
     font-size: 40px;
     font-weight: bold;
+}
+
+.cards p {
+    color: #555;
+    font-size: 17px;
+    font-weight: 600;
+    opacity: .8;
+    letter-spacing: .5px;
 }
 
 /* .paddinglr{
