--- a/css/style.css
+++ b/css/style.css
@@ -200,6 +200,41 @@ header::before {
     transform: translateX(0);
 }
 
+nav.sticky {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    transition: 0.2s linear;
+}
+
+nav.sticky ul li {
+    margin-left: 40px;
+}
+
+nav.sticky a .logo-unit-sticky img {
+    width: 65px;
+    transform: scale(1.3);
+}
+
+.marginTop {
+    margin-top: 178.8px;
+}
+
+.navbar.sticky {
+    left: 0%;
+    position: fixed;
+    top: 0%;
+    width: 100%;
+    padding: 15px 10% 5px 10%;
+    background-color: #053f81cb;
+    border-radius: 0;
+    box-shadow: 0 20px 20px rgba(0, 0, 0, 0.2), 0px 0px 50px rgba(0, 0, 0, 0.2);
+}
+
+#sticky-logo {
+    display: none;
+}
+
 /* Courses */
 
 .courses {
