--- a/css/media-quaries.css
+++ b/css/media-quaries.css
@@ -3,14 +3,13 @@
 /* Small devices (landscape phones, less than 768px) */
 
 @media (max-width: 768px) {
-
     /* Tab Home Section  */
     .container {
         max-width: 100vw;
     }
-    header{
-        background-position:center;
-        height: 80vh;
+    header {
+        background-position: center;
+        height: 85vw;
     }
     .header-top {
         padding: 0% 2%;
@@ -56,7 +55,7 @@
         top: 100%;
         opacity: 1;
         visibility: visible;
-        pointer-events:all;
+        pointer-events: all;
     }
     .logo-unit img {
         display: none;
@@ -67,8 +66,15 @@
     .mobile #sticky-logo img {
         width: 9vw;
     }
+    nav.sticky a .logo-unit-sticky img {
+        width: 9vw;
+        transform: scale(1);
+    }
+    .navbar.sticky {
+        padding: 1% 3%;
+    }
     .intro {
-        margin-top: 14%;
+        margin-top: 11%;
     }
     .intro h1 {
         margin-top: 10px;
@@ -80,10 +86,134 @@
         line-height: 40px;
     }
     .explore-btn {
-        margin-top: 6%;
+        margin-top: 4%;
+    }
+    /* Our Expertise Section  */
+    .expertise-container {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: auto;
+        grid-gap: 4%;
+        grid-template-areas: ' . . ' ' . . ';
+        justify-items: center;
+    }
+    .cards {
+        width: 70%;
+        box-shadow: 0 20px 20px rgba(0, 0, 0, 0.2), 0px 0px 25px rgba(0, 0, 0, 0.2);
+    }
+    /* directors-message */
+    .directors-message {
+        height: 85vw;
+    }
+    .director-img {
+        display: none;
+    }
+    .directors-message .message {
+        width: 100vw;
+        height: 100%;
+        padding: 100px 60px 0 100px;
+    }
+    .explore-btn-message {
+        margin-top: 20px;
+    }
+    /* Gallery section */
+    .carousel-container {
+        max-width: 100vw;
+        height: 85vw;
+    }
+    .carousel-slide .img {
+        width: 100vw;
+        height: 85vw;
+    }
+    .img-gallery a {
+        height: 13rem;
+    }
+    .img-1, .img-6, .img-9, .img-14, .img-17, .img-22 {
+        min-height: 27rem;
+    }
+    /* yt playlist section  */
+    .playlist {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    div.playlist iframe {
+        width: 75vw;
+        height: 275px;
+        margin-top: 2%;
+    }
+    /* About or Why Choose Us section  */
+    .topics-grid {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        justify-items: center;
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+    .about-us h1 {
+        margin-bottom: 10px;
+    }
+    /* Testimonials Section  */
+    .tCarousel-container {
+        max-width: 100vw;
+    }
+    .tCarousel-slide .review-slide {
+        width: 100vw;
+        height: 45vw;
+    }
+    /* Contact Us Section  */
+    .contact-us {
+        margin-bottom: 90vh;
+    }
+    .contact-container {
+        top: 435px;
+        border-radius: 0px;
+        height: 90vw;
+    }
+    .info {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 50px;
+        padding: 0;
+    }
+    .loaction, .phone, .email {
+        width: 75%;
+    }
+    .contact-form {
+        top: 75vw;
+        left: 50%;
+        transform: translateX(-50%);
     }
 
-    /* Our Expertise Section  */
+    /* Footer Section  */
+    
+
+    .footer {
+        margin-top: 145vw;
+    }
+    .footer-container {
+        display: grid;
+        justify-items: center;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: auto;
+        grid-gap: 4%;
+        grid-template-areas: ' . . .' ' s s s ';
+    }
+    .footer-container .social-networks {
+        grid-area: s;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    .footer-container .social-networks ul {
+        display: flex;
+        align-items: center;
+    }
+    .footer h1 {
+        margin-bottom: 15px;
+    }
 }
 
 /* Medium devices (tablets, less than 992px) */
